refactor: rewrite genre service test in BDD Mockito style